--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,76 @@
+$days: (
+  mon: 0,
+  tue: 1,
+  wed: 2,
+  thu: 3,
+  fri: 4,
+  sat: 5,
+  sun: 6
+);
+$days-in-row: 7;
+$square-size: 100px;
+$gap-size: 1px;
+$square-plus-gap: calc($square-size + $gap-size);
+$calendar-width: calc($square-plus-gap * $days-in-row);
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
 body {
   margin: 0;
+}
+
+.month {
+  display: flex;
+  width: $calendar-width;
+  padding: 0 10px;
+  flex-flow: row wrap;
+  justify-content: left;
+  gap: $gap-size;
+
+  @each $day, $day-number in $days {
+    &--start-day-#{$day} &__day:first-child {
+      margin-left: calc($day-number * $square-plus-gap + 1px);
+    }
+  }
+
+  @for $days-number from 28 through 31 {
+    &--month-length-#{$days-number} &__day:nth-child(n + #{$days-number + 1}) {
+    display: none;
+    }
+  }
+}
+
+@for $i from 1 through 31 {
+  .month__day:nth-child(#{$i})::before {
+    content: '#{$i}';
+  }
+}
+
+
+.month__day {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  width: $square-size;
+  height: $square-size;
+  background-color: #eee;
+  box-sizing: border-box;
+  border: 1px solid black;
+  transition-duration: 0.5s;
+  position: relative;
+
+  &::before {
+    content: '';
+    position: absolute;
+  }
+
+  &:hover {
+    background-color: pink;
+    transform: translate(0, -20px);
+    cursor: pointer;
+  }
 }
