--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,8 +10,8 @@ body {
 	margin: auto;
 	position: absolute;
 	inset: 0;
-	width: $cell-size * 7 + $gap * 7;
-	height: $cell-size * 6 + $gap * 6;
+	width: 7 * ($cell-size + $gap);
+	height: 6 * ($cell-size + $gap);
 	display: flex;
 	flex-wrap: wrap;
 	gap: $gap;
