--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -2,10 +2,10 @@ $sunday-margin: 606px;
 $cell-size: 100px;
 $gap: 1px;
 $days-and-margins: (
-"sat" ($cell-size + $gap),
-"fri" ($cell-size * 2 + $gap * 2),
-"thu" ($cell-size * 3 + $gap * 3),
-"wed" ($cell-size * 4 + $gap * 4),
-"tue" ($cell-size * 5 + $gap * 5),
-"mon" ($cell-size * 6 + $gap * 6)
+"sat" 1 * ($cell-size + $gap),
+"fri" 2 * ($cell-size + $gap),
+"thu" 3 * ($cell-size + $gap),
+"wed" 4 * ($cell-size + $gap),
+"tue" 5 * ($cell-size + $gap),
+"mon" 6 * ($cell-size + $gap)
 );
