--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@ $days: (
   sat: 5,
   sun: 6
 );
+$calendar-font: Arial, Helvetica, sans-serif;
 $days-in-row: 7;
 $square-size: 100px;
 $square-gap-size: 1px;
@@ -19,7 +20,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  font-family: 'Arial', sans-serif;
+  font-family: $calendar-font;
   font-size: 30px;
 }
 
@@ -50,16 +51,16 @@ body {
   justify-content: center;
   align-items: center;
   padding-left: 1px;
-
+  
   background-color: #eee;
-  border: 1px solid #000000;
+  border: 1px solid #000;
 
   cursor: pointer;
-  transition: transform 0.5s ease-in-out;
+  transition: 500ms;
 
 &:hover {
   transform: translateY(-20px);
-  background-color: #FFBFCB;
+  background-color: pink;
 }
 
 @for $day from 1 through 31 {
