--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -32,39 +32,39 @@ body {
   width: $calendar-width;
 
     @each $day, $day-number in $days {
-      &--start-day-#{$day} &__day:first-child {
+      &--start-day--#{$day} &__day:first-child {
         margin-left: $day-number * $square-size-full;
       }
     }
 
     @for $days-number from 28 through 31 {
-      &--month-length-#{$days-number} &__day:nth-child(n + #{$days-number + 1}) {
+      &--month-length--#{$days-number} &__day:nth-child(n + #{$days-number + 1}) {
         display: none;
       }
     }
 
-&__day {
-  width: $square-size;
-  height: $square-size;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-left: 1px;
-  
-  background-color: #eee;
-  border: 1px solid #000;
+  &__day {
+    width: $square-size;
+    height: $square-size;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 1px;
 
-  cursor: pointer;
-  transition: 500ms;
+    background-color: #eee;
+    border: 1px solid #000;
 
-&:hover {
-  transform: translateY(-20px);
-  background-color: pink;
-}
+    cursor: pointer;
+    transition: 500ms ease-in-out;
 
-@for $day from 1 through 31 {
-  &:nth-child(#{$day})::before {
+  &:hover {
+    transform: translateY(-20px);
+    background-color: pink;
+  }
+
+  @for $day from 1 through 31 {
+    &:nth-child(#{$day})::before {
     content: "#{$day}";
     }
    }
