--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -18,7 +18,7 @@ body {
   @each $week, $day in $week-days {
     &--start-day-#{$week}
     &__day:first-child{
-      margin-left: $day * $square-with-gap;
+      margin-left: $day * $square-with-gap + $gap;
     }
   }
 
@@ -41,10 +41,6 @@ body {
     cursor: pointer;
     transform: translateY(-20px);
     transition-duration: 0.5s;
-  }
-
-  &:first-child {
-    margin-left: 618px;
   }
 
   @for $num from 1 through 31 {
