--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,10 @@
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+@import 'variables';
+@import 'calendar';
+@import 'days';
