--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,11 @@
 body {
   margin: 0;
+}
+
+.main {
+  position: fixed;
+  inset: 0;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -7,4 +13,3 @@ body {
 
 @import 'variables';
 @import 'calendar';
-@import 'days';
