--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 $size-block-day: 100px;
 $gap-between-day: 1px;
+$calendar-padding: 10px;
 $width-calendar: $size-block-day * 7 + $gap-between-day * 6;
 $week-days: 0 'mon', 1 'tue', 2 'wed', 3 'thu', 4 'fri', 5 'sat', 6 'sun';
-$start-day: 'wed';
-$end-month: 31;
+$max-month-length: 32;
