--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -5,14 +5,53 @@
   align-items: center;
   flex-wrap: wrap;
   gap: $gap-between-day;
-  padding: 10px;
+  padding: $calendar-padding;
+
+  &__day {
+    box-sizing: border-box;
+    height: $size-block-day;
+    width: 100px;
+    background-color: #eee;
+
+    border: 1px solid black;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+
+    &:hover {
+      cursor: pointer;
+      background-color: #FFBFCB;
+      transform: translateY(-20px);
+      transition-duration: .5s;
+    }
+
+    @for $day from 1 through $max-month-length {
+      &--#{$day}::before {
+        content: "#{$day}";
+        transition-duration: .5s;
+      }
+    }
+  }
+
+  @for $day from 28 through $max-month-length {
+    &--month-length-#{$day} {
+      & :nth-child(n + #{$day + 1}) {
+        display: none;
+      }
+    }
+  }
 
   @each $coef, $week-day in $week-days {
-    @if $week-day == $start-day {
+    &--start-day-#{$week-day} {
       & :nth-child(1) {
         margin-left: $coef * ($size-block-day + $gap-between-day);
       }
     }
   }
+
 }
 
