--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -4,6 +4,8 @@ $text-color: black;
 $background-color: #eee;
 $hover-color: #FFBFCB;
 $animation-duration: 0.5s;
+$calendar-padding: 10px;
+$calendar-gap: 1px;
 $days-week: (
   'mon':0,
   'tue':1,
