--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,3 +1,13 @@
+.calendar-main {
+  margin: 0;
+  position: fixed;
+  inset: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .calendar {
   width: $width-calendar;
 
@@ -19,8 +29,9 @@
     justify-content: center;
     align-items: center;
 
-    font-family: Arial, sans-serif;
     font-size: 30px;
+    font-family: Arial, sans-serif;
+    color: #000;
 
     &:hover {
       cursor: pointer;
@@ -30,9 +41,8 @@
     }
 
     @for $day from 1 through $max-month-length {
-      &--#{$day}::before {
+      &:nth-child(#{$day})::before {
         content: "#{$day}";
-        transition-duration: .5s;
       }
     }
   }
