--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,13 @@
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
+html {
+  height: 100%;
+}
+
+@import 'vars';
+@import 'calendar';
