--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,89 @@
+/* stylelint-disable rule-empty-line-before */
+
+$day-color: #eee;
+$cell-color: #FFBFCB;
+$font-size: 30px;
+$calendar-day-size: 100px;
+$gap: 1px;
+$sunday-margin: 606px;
+
+:root {
+font-family: Arial, Helvetica, sans-serif;
+font-size: $font-size;
+}
+
 body {
   margin: 0;
 }
+
+// $days-margins: (
+//   'mon' 1 * ($calendar-day-size + $gap),
+//   'tue' 2 * ($calendar-day-size + $gap),
+//   'wed' 3 * ($calendar-day-size + $gap),
+//   'thu' 4 * ($calendar-day-size + $gap),
+//   'fri' 5 * ($calendar-day-size + $gap),
+//   'sat' 6 * ($calendar-day-size + $gap),
+//   'sun'
+// );
+
+$days-margins: (
+  'mon' 0,
+  'tue' 1,
+  'wed' 2,
+  'thu' 3,
+  'fri' 4,
+  'sat' 5,
+  'sun' 6,
+);
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+  gap: $gap;
+  max-width: 706px;
+
+// trzeba będzie zrobić each dla first day i
+// for dla last day
+
+  @each $day, $numbers in $days-margins {
+    &--start-day--#{$day} :first-child {
+      margin-left: calc(#{$numbers} * ($calendar-day-size + $gap));
+    }
+  }
+
+  @for $index from 28 through 31 {
+    &--month-length--#{$index} :nth-child(n + #{$index + 1}) {
+      opacity: 0;
+    }
+  }
+}
+
+
+
+
+.calendar__day {
+  background-color: $day-color;
+  height: $calendar-day-size;
+  width: $calendar-day-size;
+  border: 1px solid black;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s;
+
+  @for $day-num from 1 through 31 {
+	  &:nth-child(#{$day-num})::before {
+			content: '#{$day-num}';
+		}
+	}
+
+  &:hover {
+    cursor: pointer;
+    background-color: $cell-color;
+    transform: translateY(-20px);
+
+  }
+}
+
