calendar local solution

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -8,7 +8,7 @@
   @each $week, $day in $week-days {
     &--start-day-#{$week}
     &__day:first-child{
-      margin-left: 513px
+      margin-left: $day * $size-square-with-gap;
     }
   }
 
