--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 /* stylelint-disable rule-empty-line-before */
-:root {
+html {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
