--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,72 +1,3 @@
 /* stylelint-disable rule-empty-line-before */
-
-$day-color: #eee;
-$cell-color: #FFBFCB;
-$font-size: 30px;
-$calendar-day-size: 100px;
-$gap: 1px;
-
-:root {
-font-family: Arial, Helvetica, sans-serif;
-font-size: $font-size;
-}
-
-body {
-  margin: 0;
-}
-
-$days-margins: (
-  'mon' 0,
-  'tue' 1,
-  'wed' 2,
-  'thu' 3,
-  'fri' 4,
-  'sat' 5,
-  'sun' 6,
-);
-
-.calendar {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 10px;
-  gap: $gap;
-  max-width: 706px;
-
-  @each $day, $numbers in $days-margins {
-    &--start-day--#{$day} :first-child {
-      margin-left: calc(#{$numbers} * ($calendar-day-size + $gap));
-    }
-  }
-
-  @for $index from 28 through 31 {
-    &--month-length--#{$index} :nth-child(n + #{$index + 1}) {
-      opacity: 0;
-    }
-  }
-}
-
-.calendar__day {
-  background-color: $day-color;
-  height: $calendar-day-size;
-  width: $calendar-day-size;
-  border: 1px solid black;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: 0.5s;
-
-  @for $index from 1 through 31 {
-	  &:nth-child(#{$index})::before {
-			content: '#{$index}';
-		}
-	}
-
-  &:hover {
-    cursor: pointer;
-    background-color: $cell-color;
-    transform: translateY(-20px);
-
-  }
-}
-
+@use '../styles/blocks/reset.scss';
+@use '../styles/blocks/calendar.scss';
