NOW all is done

--- a/src/styles/blocks/reset.scss
+++ b/src/styles/blocks/reset.scss
@@ -8,6 +8,9 @@ html {
   body {
     margin: 0;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    /* stylelint-disable-next-line declaration-block-no-redundant-longhand-properties */
+    align-content: center;
+    height: 100vh;
   }
