--- a/src/style.css
+++ b/src/style.css
@@ -7,8 +7,11 @@ html {
 body {
   margin: 0;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  /* stylelint-disable-next-line declaration-block-no-redundant-longhand-properties */
+  align-content: center;
+  height: 100vh;
 }
 
 .calendar {
