changed selector class

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,7 +30,7 @@ body {
 
   @for $i from 28 through $calendardays {
     &--month-length-#{$i} {
-      .calendar__item {
+      .calendar__day {
         &:nth-child(n + #{$i + 1}) {
           display: none;
         }
@@ -38,7 +38,7 @@ body {
     }
   }
 
-  &__item {
+  &__day {
     width: rem(100);
     height: rem(100);
     position: relative;
