--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,16 @@
-body {
+@import './blocks/calendar';
+@import './utiles/var';
+
+* {
+  box-sizing: border-box;
+  font-family: $calendar-font;
+  font-size: 30px;
+}
+
+.body {
   margin: 0;
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
 }
