add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -48,7 +48,7 @@ $day-week: 7;
 $days: 0 'mon', 1 'tue', 2 'wed', 3 'thu', 4 'fri', 5 'sat', 6 'sun';
 
  @for $number-day from 1 through 32 {
-  .calendar__:nth-child(#{$number-day})::before {
+  .calendar__day:nth-child(#{$number-day})::before {
     content: '#{$number-day}';
   }
 }
