add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,13 +13,12 @@ body {
 $width-day: 100px;
 $heigth-day: 100px;
 $calendar-paddings: 10px;
-$day-week: 7;
 
 .calendar {
   display: flex;
   flex-wrap: wrap;
 
-  width:calc(#{$day-week} * #{$width-day} + 6 * #{$calendar-paddings});
+  width:calc(7 * #{$width-day} + 6 * #{$calendar-paddings});
   gap: 1px;
 
   &__day {
