--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,67 +1,4 @@
-html {
-  display: flex;
-  block-size: border-box;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-}
+@import './utils/variables.scss';
+@import './utils/mixins';
 
-body {
-  margin: 0;
-}
-
-$day-width: 100px;
-$day-heigth: 100px;
-$day-padding: 10px;
-$day-gap: 1px;
-$day-week: 7;
-
-.calendar {
-  display: flex;
-  flex-flow: row wrap;
-  gap: #{$day-gap};
-  width: calc(#{$day-week} * #{$day-width} + 6 * #{$day-padding});
-
-  &__number {
-    height: #{$day-heigth};
-    width: #{$day-width};
-    border: 1px solid #000;
-    background-color: #eee;
-    font-size: 30px;
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    transition-duration: 0.5s;
-
-    &:hover {
-      transform: translateY(-20px);
-      background-color: pink;
-      cursor: pointer;
-    }
-  }
-}
-
-  $days: 0 'mon', 1 'tue', 2 'wed', 3 'thu', 4 'fri', 5 'sat', 6 'sun';
-  $max-length: 32;
-
-  @for $number from 1 through $max-length {
-    .calendar__number:nth-child(#{$number})::before {
-      content: '#{$number}';
-    }
-  }
-
-  @each $numbr, $day in $days {
-    .calendar--start-day-#{$day}>:nth-child(1) {
-        margin-left: $numbr * ($day-heigth + $day-gap + 2);
-      }
-  }
-
-  @for $i from 28 through $max-length {
-    .calendar--month-length-#{$i} {
-      .calendar--month-length:nth-child(n + #{$i + 1}) {
-        display: none;
-      }
-    }
-  }
+@import 'blocks/calendar';
