--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -1,4 +1,4 @@
-@mixin contentNumber() {
+@mixin content-number() {
   @for $number from 1 through $max-length {
     .calendar__number:nth-child(#{$number})::before {
       content: '#{$number}';
@@ -6,7 +6,7 @@
   }
 }
 
-@mixin contentDay() {
+@mixin content-day() {
   @each $numbr, $day in $days {
     .calendar--start-day-#{$day}>:nth-child(1) {
         margin-left: $numbr * ($day-heigth + $day-gap + 1.37);
@@ -14,7 +14,7 @@
   }
 }
 
-@mixin contentMonth() {
+@mixin content-month() {
   @for $i from 28 through $max-length {
     .calendar--month-length-#{$i} {
       .calendar--month-length:nth-child(n + #{$i + 1}) {
