--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,13 +1,13 @@
-html {
-  display: flex;
-  block-size: border-box;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
+* {
+  box-sizing: border-box;
 }
 
 body {
   margin: 0;
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
 }
 
 .calendar {
@@ -37,6 +37,6 @@ body {
   }
 }
 
-@include contentNumberForCalendar;
-@include contentDay;
-@include contentMonth;
+@include content-number;
+@include content-day;
+@include content-month;
