--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -9,7 +9,7 @@
 @mixin content-day() {
   @each $numbr, $day in $days {
     .calendar--start-day-#{$day}>:nth-child(1) {
-        margin-left: $numbr * ($day-heigth + $day-gap + 1.37);
+        margin-left: $numbr * ($day-heigth + $day-gap);
       }
   }
 }
