--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,79 +1,58 @@
+@import 'variable.scss';
+
 body {
-  margin: 0;
+  font-family: $numberFont;
+  font-size: $numberSize;
 }
-$calendar-width: 720px;
-$day-size: 100px;
-$border-color: #000;
-$background-color: #eee;
-$number-font-size: 30px;
-$gap: 1px;
-$padding: 10px;
-$font-family: arial, sans-serif;
-
-$weekdays: mon, tue, wed, thu, fri, sat, sun;
-
-$month-lengths: 28, 29, 30, 31;
-
-.wraper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
 .calendar {
-  width: $calendar-width;
   display: flex;
   flex-wrap: wrap;
-  justify-content: start;
-  padding: $padding;
+  justify-content: left;
+  box-sizing: border-box;
+  margin: 40px auto;
+  max-width: ($cellSize + $gap) * 7 + ($padding * 2);
 
-  .calendar__day {
-    width: calc((100% - (#{$gap} * 6) - (#{$padding} * 2)) / 7);
-    height: $day-size;
-    background-color: $background-color;
-    border: 1px solid $border-color;
+  @for $i from 0 to length($monthLengths) {
+    $length: nth($monthLengths, $i + 1);
+    &--month-length-#{$length} .day:nth-child(n + #{$length + 1}) {
+      display: none;
+    }
+  }
+
+  @each $day in $daysOfWeek {
+    &--start--#{$day} {
+      $shift: index($daysOfWeek, $day) + 1;
+      margin-left: (($cellSize + $gap) * $shift) + ($padding * 2);
+
+      .calendar__day:nth-child(n + #{$shift + 2}) {
+        margin-left: 0;
+      }
+    }
+}
+
+  .day {
+    width: $cellSize;
+    height: $cellSize;
+    border: 1px solid $borderColor;
+    background-color: $backgroundColor;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
 
-    &::before {
-      content: "";
+    @for $index from 1 to 32 {
+      &:nth-child(#{$index})::before {
+        content: "#{$index}";
+
+      }
     }
+
 
     &:hover {
       cursor: pointer;
       background-color: pink;
       transform: translateY(-20px);
-      transition: transform 0.5s;
-    }
-
-    @each $weekday in $weekdays {
-      &--#{$weekday} {
-        margin-left: calc(#{index($weekdays, $weekday)} *
-        (#{$day-size} + #{$gap}
-      )
-    );
-      }
-    }
-
-    @for $i from 1 through 31 {
-      &:nth-child(#{$i}) {
-        &::before {
-          content: "#{$i}";
-          font-size: $number-font-size;
-          font-family: $font-family;
-        }
-      }
-    }
-
-    @each $month-length in $month-lengths {
-      &.month-length-#{$month-length} {
-        &:nth-child(n + #{$month-length + 1}) {
-          display: none;
-        }
-      }
+      transition: transform $transitionDuration;
     }
   }
 }
