--- a/src/styles/block/calender.scss
+++ b/src/styles/block/calender.scss
@@ -6,13 +6,13 @@
   padding: $calendar-padding;
 
   @each $day, $margin-length in $start-day {
-    &__start-day-#{$day} > :first-child {
+    &--start-day_#{$day} > :first-child {
       margin-left: $margin-length;
     }
   }
 
   @for $i from 28 through 31 {
-    &__month-length-#{$i} > :nth-child(n + #{$i + 1}) {
+    &--month-length_#{$i} > :nth-child(n + #{$i + 1}) {
       display: none;
     }
   }
