--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -2,11 +2,10 @@ $day-width: 100px;
 $calendar-padding: 10px;
 $day-row-count: 7;
 $margin: $day-width + 1px;
-$start-day:
-  'mon' 0,
-  'tue' $margin,
-  'wed' 2 * $margin,
-  'thu' 3 * $margin,
-  'fri' 4 * $margin,
-  'sat' 5 * $margin,
-  'sun' 6 * $margin;
+$start-day: "mon" 0,
+  "tue" $margin,
+  "wed" 2 * $margin,
+  "thu" 3 * $margin,
+  "fri" 4 * $margin,
+  "sat" 5 * $margin,
+  "sun" 6 * $margin;
