--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,56 @@
+@import './variables';
+
 body {
   margin: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  color: black;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: $calendar-gap;
+  width: $calendar-width;
+  padding: $calendar-padding;
+  transition: all 0.5s;
+
+  @for $length from 28 through 31 {
+    &--month-length-#{$length} {
+      .calendar__day:nth-child(n + #{$length + 1}) {
+        display: none;
+      }
+    }
+  }
+
+  @each $day, $idx in $days-of-week {
+    &--start-day-#{$day} {
+      .calendar__day:first-child {
+        margin-left: $idx * ($cell-width + $calendar-gap + 2);
+      }
+    }
+  }
+
+  &__day {
+    border: 1px solid black;
+    background-color: #eee;
+    height: $cell-height;
+    width: $cell-width;
+    text-align: center;
+    line-height: 100px;
+
+    @for $days from 1 through 31 {
+      &:nth-child(#{$days})::before {
+        content: '#{$days}';
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+    }
+  }
 }
