--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,11 +3,4 @@ $cell-width: 100px;
 $cell-height: 100px;
 $calendar-width: ($calendar-padding * 2) + $cell-width * 7;
 $calendar-gap: 1px;
-$days-of-week: 
-  'mon' 0,
-  'tue' 1,
-  'wed' 2,
-  'thu' 3,
-  'fri' 4,
-  'sat' 5,
-  'sun' 6;
+$days-of-week: 'mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6;
