--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,16 +6,19 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
   color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   gap: $calendar-gap;
   width: $calendar-width;
   padding: $calendar-padding;
-  transition: all 0.5s;
+  margin: 0 auto;
 
   @for $length from 28 through 31 {
     &--month-length-#{$length} {
@@ -50,6 +53,7 @@ body {
     &:hover {
       cursor: pointer;
       background-color: #ffbfcb;
+      transition: all 0.5s;
       transform: translateY(-20px);
     }
   }
