--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,70 @@
+$general-color: #eee;
+$pink-color: #FFBFCB;
+$general-font-family: Arial, Helvetica, sans-serif;;
+$week-days: 0 "mon", 1 "tue", 2 "wed", 3 "thu", 4 "fri", 5 "sat", 6 "sun";
+$columns: 7;
+$calendar-size: 100px;
+
 body {
   margin: 0;
+  font-family: $general-font-family;
+  font-weight: 500;
+  font-size: 30px;
 }
+
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  max-width: $calendar-size * $columns;
+  padding: 10px;
+
+
+  /* Start day for first day in calendar */
+  @each
+    $idx,
+    $day in $week-days {
+    &--start-day--#{$day} > &__day:first-child {
+      margin-left:  $idx * $calendar-size + 1px;
+    }
+  }
+
+
+  /* Month length for calendar */
+  @for $length from 28 through 31 {
+    &--month-length--#{$length} >
+    &__day:nth-child(n + #{$length + 1}) {
+     display: none;
+    }
+  }
+
+  &__day {
+    box-sizing: border-box;
+    width: $calendar-size;
+    height: $calendar-size;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: $general-color;
+    border: 1px solid black;
+    transition: all 0.5s;
+
+    /* Hover a cell */
+    &:hover {
+      cursor: pointer;
+      background: $pink-color;
+      transform: translateY(-20px);
+    }
+
+    /* All number in cell */
+    @for $number from 1 through 31  {
+      &--#{$number}::before {
+        display: block;
+        content: '#{$number}';
+      }
+    }
+
+  }
+}
+
