--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,7 +17,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 1px;
-  max-width: $calendar-size * $columns;
+  max-width: $calendar-size * $columns + 10;
+  height: min-content;
   padding: 10px;
 
 
@@ -26,7 +27,7 @@ body {
     $idx,
     $day in $week-days {
     &--start-day--#{$day} > &__day:first-child {
-      margin-left:  $idx * $calendar-size + 1px;
+      margin-left:  $idx * $calendar-size + 5px;
     }
   }
 
