--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -7,5 +7,5 @@ $padding: 20px;
 $gap: 1px;
 $transitionDuration: 0.5s;
 
-$daysOfWeek: mon, tue, wed, thu, fri, sat, sun;
+$daysOfWeek: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5 , sun 6;
 $monthLengths: 28, 29, 30, 31;
