--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -8,16 +8,18 @@
 
 @mixin content-day() {
   @each $numbr, $day in $days {
-    .calendar--start-day-#{$day}>:nth-child(1) {
+    .calendar--start-day-#{$day} {
+      .calendar__number:first-child {
         margin-left: $numbr * ($day-heigth + $day-gap);
       }
+    }
   }
 }
 
 @mixin content-month() {
   @for $i from 28 through $max-length {
     .calendar--month-length-#{$i} {
-      .calendar--month-length:nth-child(n + #{$i + 1}) {
+      .calendar__number:nth-child(n + #{$i + 1}) {
         display: none;
       }
     }
