errors have been corrected

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,71 +1,3 @@
-html {
-  display: flex;
-  box-sizing: border-box;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-}
-
-body {
-  margin: 0;
-}
-
-$width-day: 100px;
-$heigth-day: 100px;
-$calendar-paddings: 10px;
-
-.calendar {
-  display: flex;
-  flex-wrap: wrap;
-
-  width:calc(7 * #{$width-day} + 6 * #{$calendar-paddings});
-  gap: 1px;
-
-  &__day {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    width:  $width-day;
-    height: $heigth-day;
-
-    border: 1px solid #000;
-    background-color: #eee;
-    transition-duration: 0.5s;
-
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
-
-    &:hover {
-      transform: translateY(-20px);
-      background-color: pink;
-      cursor: pointer;
-    }
-  }
-}
-
-$days: 0 'mon', 1 'tue', 2 'wed', 3 'thu', 4 'fri', 5 'sat', 6 'sun';
-
- @for $number-day from 1 through 32 {
-  .calendar__day:nth-child(#{$number-day})::before {
-    content: '#{$number-day}';
-  }
-}
-
-@each $number, $day in $days {
-  .calendar--start-day-#{$day}>:nth-child(1) {
-    margin-left: $number * ($heigth-day + 1 + 2);
-  }
-}
-
-@for $i from 28 through 32 {
-  .calendar--month-length-#{$i} {
-    .calendar--month-length:nth-child(n + #{$i + 1}) {
-      display: none;
-    }
-  }
-}
-
-
-
-
+@import 'src/styles/utils/variables';
+@import 'src/styles/utils/mixins';
+@import 'block/calendar';
