--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,78 @@
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.calendar {
+  $day-width: 100px;
+  $day-height: 100px;
+  $days-gap-size: 1px;
+  $days-in-row: 7;
+  $calendar-paddings: 10px;
+  $calendar-width: (
+    $day-width + $days-gap-size ) * $days-in-row - $days-gap-size;
+  $days: (
+    mon 1,
+    tue 2,
+    wed 3,
+    thu 4,
+    fri 5,
+    sat 6,
+    sun 7
+  );
+$transition-duration: 0.5s;
+
+padding: $calendar-paddings;
+max-width: $calendar-width;
+width: 100%;
+display: flex;
+flex-wrap: wrap;
+gap: 1px;
+
+&__day {
+  box-sizing: border-box;
+  background-color: #ccc;
+  width: $day-width;
+  height: $day-height;
+  border: solid 1px #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  cursor: pointer;
+  transition: background-color $transition-duration,
+    transform $transition-duration;
+
+  &:hover {
+    background-color: #FFBFCB;
+    transform: translateY(-20px);
+  }
+
+  @for $i from 1 through 31 {
+    &:nth-child(#{$i}) {
+      &::before {
+        content:'#{$i}';
+        font-family: Arial,
+          Helvetica,
+          sans-serif;
+        font-size: 30px;
+      }
+    }
+  }
+}
+
+@each $day, $offset in $days {
+  &--start-day-#{$day} &__day:nth-child(#{$offset}) {
+    margin-left: $calendar-width - $day-width;
+  }
+}
+
+@for $i from 28 through 31 {
+  &--month-length-#{$i} &__day:nth-child(n + #{$i + 1}) {
+    display: none;
+  }
+}
 }
