--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,7 +21,7 @@ $days: mon, tue, wed, thu, fri, sat, sun;
 
 @each $day,$i in $days {
   .calendar--start-day-#{day} > .calendar__day:first-child {
-    margin-left: calc((1 - index($days, $day)) * (100% / 7));
+    margin-left: calc((1 - i($days, $day)) * (100% / 7));
   }
 }
 
