--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -29,13 +29,14 @@
     transition-duration: .5s;
     font-size: 30px;
     font-family: Arial, sans-serif;
+    cursor: pointer;
+    transition-duration: .5s;
   }
 
   &__day:hover {
-    cursor: pointer;
     background-color: #FFBFCB;
-    transition-duration: .5s;
     transform: translateY(-20px);
+    transition-property: background-color, transform;
   }
 
   @each $day-key, $day-value in $days {
