--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -31,14 +31,14 @@
     font-family: Arial, sans-serif;
     cursor: pointer;
     transition-duration: .5s;
+    
+    &:hover {
+      background-color: #FFBFCB;
+      transform: translateY(-20px);
+      transition-property: background-color, transform;
+    }
   }
-
-  &__day:hover {
-    background-color: #FFBFCB;
-    transform: translateY(-20px);
-    transition-property: background-color, transform;
-  }
-
+  
   @each $day-key, $day-value in $days {
     &--start-day-#{$day-key}
 
