add container in code solution

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -3,8 +3,8 @@
   gap: 1px;
   justify-content: left;
   width: 706px;
+  padding: 10px;
   flex-wrap: wrap;
-  margin: 1px auto;
 
   & :nth-child(n) {
     display: flex;
