--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -34,13 +34,13 @@
   }
 
   @each $day, $margin in $week-days {
-    &--start-day--#{$day} :nth-child(1) {
+    &--start-day-#{$day} :nth-child(1) {
         margin-left: $margin;
     }
   }
 
   @each $last-day in $last-day-in-month {
-    &--month-length--#{$last-day} :nth-child(n + #{$last-day + 1}) {
+    &--month-length-#{$last-day} :nth-child(n + #{$last-day + 1}) {
       visibility: hidden;
     }
   }
