--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,16 +1,18 @@
 .calendar {
   display: flex;
   flex-wrap: wrap;
-
   gap: 1px;
   width: calc(#{$days-in-week} * #{$cell-size} + 2 * #{$padding});
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
   &__day {
-    display: flex;
     justify-content: center;
-    align-items: center;;
+    display: flex;
+    align-items: center;
     box-sizing: border-box;
-
     width: $cell-size;
     height: $cell-size;
     border: 1px solid $main-color;
@@ -18,7 +20,6 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
     color: $main-color;
-
     transition: background-color 0.5s, transform 0.5s;
     cursor: pointer;
 
@@ -35,17 +36,18 @@
   }
 }
 
-@each $day, $index in (sun 1), (mon 2), (tue 3), (wed 4), (thu 5), (fri 6), (sat 7) {
-  .calendar--start-day-#{$day} {
-    margin-left: $cell-size * ($index - 1) + $padding;
-  }
-}
-
-
 
 @for $length from 28 through 31 {
   .calendar--month-length-#{$length} .calendar__day:nth-child(n + #{$length + 1}) {
-      display: none;
+    display: none;
+  }
+}
+
+@each $day, $index in sun 1, mon 2, tue 3, wed 4, thu 5, fri 6, sat 7 {
+  .calendar--start-day-#{$day} {
+    .calendar__day:nth-child(#{$index}) {
+      margin-left: 0;
+    }
   }
 }
 
