--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -5,17 +5,10 @@
   gap: $gap;
   padding: $padding-calendar;
 
-  $start-days:
-    $mon mon,
-    $tue tue,
-    $wed wed,
-    $thu thu,
-    $fri fri,
-    $sat sat,
-    $sun sun;
+  $start-days: $mon mon, $tue tue, $wed wed, $thu thu, $fri fri, $sat sat, $sun sun;
 
   @each $day, $start-day in $start-days {
-    &--start-day--#{$start-day} :first-child {
+    &--start-day-#{$start-day} :first-child {
       margin-left: $day;
     }
   }
@@ -39,8 +32,6 @@
     @for $num from 1 through 31 {
       &:nth-child(#{$num})::before {
       content: "#{$num}";
-      font-family: Arial,sans-serif;
-      font-size: 30px;
       }
     }
 
