--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,62 @@
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
 body {
   margin: 0;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap-size;
+  margin: 0 auto;
+  padding: $calendar-padding;
+  width: $day-size * 7 + $gap-size * 6 + $calendar-padding * 2;
+
+  @each $day, $order in $days {
+    &--start-day-#{$day} :first-child {
+      margin-left: $order * ($day-size + $gap-size);
+    }
+  }
+
+  @for $length from 28 through 31 {
+    &--month-length-#{$length} :nth-child(n + #{$length + 1}) {
+      display: none;
+    }
+  }
+
+  &__day {
+    background-color: #eee;
+    height: $day-size;
+    width: $day-size;
+    border: solid 1px black;
+    transition: all 0.5s;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    @for $date from 1 through 31 {
+        &:nth-child(#{$date})::before {
+        content: '#{$date}';
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: #FFBFCB;
+      transform: translateY(-20px);
+    }
+  }
 }
