--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,11 @@
-body {
-  margin: 0;
-}
+@import './utils/variables';
+@import './utils/mixins';
+
+@import './blocks/page.scss';
+@import './blocks/calendar.scss';
+
+
+
+
+
+
