--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,61 @@
+@import './variables';
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0;
+  height: 100vh;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $day-cell-gap;
+  width: $row-width;
+
+  &__day {
+    position: relative;
+    display: none;
+    box-sizing: border-box;
+    min-width: $day-cell-size;
+    height: $day-cell-size;
+    border: 1px solid black;
+    background-color: #eee;
+
+    transition: all 0.5s;
+
+    &:hover {
+      transform: translateY(-20px);
+      background-color: $day-hover-color;
+      cursor: pointer;
+    }
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 30px;
+      }
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} .calendar__day:nth-child(-n + #{$i}){
+      display: block;
+    }
+  }
+
+  @each $index, $day in $start-day {
+    &--start-day-#{$day} .calendar__day:first-child {
+      margin-left: calc($index * $day-cell-size-with-gap);
+    }
+  }
 }
