--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -10,14 +10,14 @@
     box-sizing: border-box;
 
     @include square;
-    
+
     background-color: $cell-bcg-color;
     border: 1px solid $cell-border-color;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    transition: all 0.5s ease-in-out;
+    transition: all 0.5s;
 
     &:hover {
       transform: translateY(-20px);
