--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -33,7 +33,7 @@
   }
 
   @each  $week-day, $num-day in $week-days {
-    &--start-day--#{$week-day} {
+    &--start-day-#{$week-day} {
       .calendar__cell:first-child {
         margin-left:($cell-size + $cell-gap) * $num-day;
       }
@@ -41,7 +41,7 @@
   }
 
   @for $day-number from 28 through 31 {
-    &--month-length--#{$day-number} {
+    &--month-length-#{$day-number} {
       .calendar__cell:nth-child(n + #{$day-number + 1}) {
         display: none;
       }
