--- a/src/styles/blocks/variables.scss
+++ b/src/styles/blocks/variables.scss
@@ -3,3 +3,12 @@ $main-color: #000;
 $padding: 10px;
 $days-in-week: 7;
 $days-in-month: 31;
+$days-of-week: (
+  sun: 1,
+  mon: 2,
+  tue: 3,
+  wed: 4,
+  thu: 5,
+  fri: 6,
+  sat: 7,
+);
