--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -55,7 +55,7 @@ body {
 
   @each $index, $day in $start-day {
     &--start-day-#{$day} .calendar__day:first-child {
-      margin-left: calc($index * $day-cell-size-with-gap);
+      margin-left: $index * $day-cell-size-with-gap;
     }
   }
 }
