--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
-@import './utils/variables';
-@import './utils/mixins';
-@import './blocks/page';
-@import './blocks/calendar';
+@import 'utils/variables';
+@import 'utils/mixins';
+@import 'blocks/page';
+@import 'blocks/calendar';
 
 
 
