--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -31,7 +31,7 @@ body {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.5s;
 }
 
 .calendar__cell:hover {
@@ -194,47 +194,47 @@ body {
   font-size: 30px;
 }
 
-.calendar--start-day--mon .calendar__cell:first-child {
+.calendar--start-day-mon .calendar__cell:first-child {
   margin-left: 0;
 }
 
-.calendar--start-day--tue .calendar__cell:first-child {
+.calendar--start-day-tue .calendar__cell:first-child {
   margin-left: 101px;
 }
 
-.calendar--start-day--wed .calendar__cell:first-child {
+.calendar--start-day-wed .calendar__cell:first-child {
   margin-left: 202px;
 }
 
-.calendar--start-day--thu .calendar__cell:first-child {
+.calendar--start-day-thu .calendar__cell:first-child {
   margin-left: 303px;
 }
 
-.calendar--start-day--fri .calendar__cell:first-child {
+.calendar--start-day-fri .calendar__cell:first-child {
   margin-left: 404px;
 }
 
-.calendar--start-day--sat .calendar__cell:first-child {
+.calendar--start-day-sat .calendar__cell:first-child {
   margin-left: 505px;
 }
 
-.calendar--start-day--sun .calendar__cell:first-child {
+.calendar--start-day-sun .calendar__cell:first-child {
   margin-left: 606px;
 }
 
-.calendar--month-length--28 .calendar__cell:nth-child(n+29) {
+.calendar--month-length-28 .calendar__cell:nth-child(n+29) {
   display: none;
 }
 
-.calendar--month-length--29 .calendar__cell:nth-child(n+30) {
+.calendar--month-length-29 .calendar__cell:nth-child(n+30) {
   display: none;
 }
 
-.calendar--month-length--30 .calendar__cell:nth-child(n+31) {
+.calendar--month-length-30 .calendar__cell:nth-child(n+31) {
   display: none;
 }
 
-.calendar--month-length--31 .calendar__cell:nth-child(n+32) {
+.calendar--month-length-31 .calendar__cell:nth-child(n+32) {
   display: none;
 }
 
