--- a/src/styles/blocks/variables.scss
+++ b/src/styles/blocks/variables.scss
@@ -4,11 +4,11 @@ $padding: 10px;
 $days-in-week: 7;
 $days-in-month: 31;
 $days-of-week: (
-  sun: 1,
-  mon: 2,
-  tue: 3,
-  wed: 4,
-  thu: 5,
-  fri: 6,
-  sat: 7,
+  mon: 0,
+  tue: 1,
+  wed: 2,
+  thu: 3,
+  fri: 4,
+  sat: 5,
+  sun: 6
 );
