--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,13 @@
+@import './variables';
+@import './calendar';
+
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  color: $main-black-color;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
