--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -28,6 +28,7 @@
     box-sizing: border-box;
     background-color: $main-bg-color;
     border: 1px solid $main-black-color;
+    transition: all 0.5s ease;
 
     @for $days from 1 through 31 {
       &:nth-child(#{$days})::before {
